test/files/neg/t473.scala
class Foo(x: Foo)
case object Bar extends Foo(null)
case object Voop extends Foo(Voop)
