test/files/neg/t473.check
t473.scala:3: error: super constructor cannot be passed a self reference unless parameter is declared by-name
case object Voop extends Foo(Voop)
                             ^
one error found
